tests/snapshots/integration_cli__cli_global_options_to_config_overrides.snap
---
source: tests/integration_cli.rs
expression: overrides
---
[
    "custom/key=value",
    "global/output_log_level=4",
    "global/file_log_level=4",
    "global/dry=true",
    "paths/prefix=/build",
]
