tests/snapshots/integration_cli__cli_pr_pull.snap
---
source: tests/integration_cli.rs
expression: cli
---
Cli {
    global: GlobalOptions {
        inis: [],
        dry: false,
        log_level: None,
        file_log_level: None,
        log_file: None,
        prefix: None,
        options: [],
        no_default_inis: false,
    },
    command: Some(
        Pr(
            PrArgs {
                github_token: None,
                operation: Pull,
                pr: "usvfs/123",
            },
        ),
    ),
}
